2010-01-23  Murray Cumming  <murrayc@murrayc.com>

  Details: Static Text items and Buttons: Use foreground color from formatting.
   
	* glom/utility_widgets/layoutwidgetbase.cc: apply_formatting(): Use the 
	foreground color for labels (static text items and buttons).

2010-01-22  Murray Cumming  <murrayc@murrayc.com>

  Details: Static Text items: Use formatting.
  
	* glom/utility_widgets/labelglom.[h|cc]: Added get_label(), because this 
	really has a label as a child.
	* glom/utility_widgets/layoutwidgetbase.cc: apply_formatting(): Use get_label() 
	to make formatting work on static text items too.

2.13.1:

2010-01-22  Murray Cumming  <murrayc@murrayc.com>

  Fixed compiler warnings.
  
	* glom/libglom/data_structure/layout/layoutitem_field.cc: 
	get_formatting_used_horizontal_alignment():
	* glom/print_layout/canvas_layout_item.cc: apply_formatting(): Fixed 
	compiler warnings.

2010-01-22  Murray Cumming  <murrayc@murrayc.com>

	Make libglom-1.14 install in parallel with libglom-1.12.

	* glom/libglom/glom-1.12.pc.in: Rename to glom-1.14.pc.in
	* configure.ac: Change the libglom ABI version variable and specify the 
	changed .pc.in file.
	* Makefile.am, Makefile_libglom.am: Adapt.
	* glom/python_embed/python_module/py_glom_module.[h|cc]: Mention 
	2.14 instead of 2.14.
	* tests/test_load_python_library.cc: Adapt.

	* glom/libglom/document/document.cc: 
	get_latest_known_document_format_version(): Increment.

2010-01-22  Murray Cumming  <murrayc@murrayc.com>

	Really use formatting for multi-line fields.

	* glom/utility_widgets/textviewglom.[h|cc]: Added get_textview().
	* glom/utility_widgets/layoutwidgetbase.cc: apply_formatting(): 
	Get the appropriate child for buttons and textviews, making this work 
	for textviews (multi line fields), but it still does not work for 
	labels (static text items) and buttons.

2010-01-22  Murray Cumming  <murrayc@murrayc.com>>

	Allow custom text formatting of Buttons as well as text items and fields.
